hide next/previous arrow on mobile and prevent default click behavior in slider

--- a/frontend/src/components/Carousels/SampleNextArrow.css
+++ b/frontend/src/components/Carousels/SampleNextArrow.css
@@ -27,3 +27,10 @@
     opacity: 1;
     cursor: pointer;
 }
+
+/* Media query for mobile screens */
+@media only screen and (max-width: 768px) {
+    .next { display: none; }
+    .back { display: none; }
+    .next-spinner-wheel {display: none;}
+}
